/*
plugins {
    id "com.github.hierynomus.license" version "0.15.0j"
}
*/

apply plugin: 'groovy'
apply plugin: 'java'

version = '1.1'
sourceCompatibility = 1.8
targetCompatibility = 1.8


allprojects {
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
        }
    }
}

//create a single Jar with all dependencies
task buildJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Proxeus Document Service',
                'Implementation-Version': archiveVersion,
                'Main-Class': 'com.proxeus.Main'
    }
    archiveFileName = "document-service.jar"
    destinationDirectory = file("$rootDir/")
    archiveBaseName = project.name
    from { configurations.implementation.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA', '**/*Test.java', '**/*.xsd', '**/*.cat', '**/*.txt'
}

repositories {
    mavenCentral()
    maven {
        url "https://jcenter.bintray.com/"
    }
    maven {
        url "https://dl.bintray.com/groovy/maven"
    }
}

dependencies {
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'org.eclipse.jetty:jetty-io:11.0.7'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
    def ex = {
        exclude group: 'org.slf4j', module: 'slf4j-jdk14'
        exclude group: 'org.slf4j', module: 'slf4j-api'
        exclude group: 'org.slf4j', module: 'slf4j-nop'
        exclude group: 'org.slf4j', module: 'jcl-over-slf4j'
    }
    implementation "org.slf4j:slf4j-simple:1.7.32"

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation 'org.apache.logging.log4j:log4j-core:2.16.0'

    implementation 'org.codehaus.groovy:groovy-all:3.0.9', ex

    // !! UNSUPPORTED - OBSOLETE
    implementation "org.jtwig:jtwig-core:5.87.0.RELEASE", ex

    // !! UNSUPPORTED - OBSOLETE
    implementation "javax.xml.bind:jaxb-api:2.2.11", ex

    implementation "commons-io:commons-io:2.11.0", ex

    // !! UNSUPPORTED - UNAVAILABLE
    // https://mvnrepository.com/artifact/javaxt/javaxt-core
    //implementation "javaxt:javaxt-core:1.7.8"

    implementation "org.apache.commons:commons-lang3:3.9"

    implementation "commons-codec:commons-codec:1.15", ex
    implementation "commons-io:commons-io:2.11.0", ex
    implementation "commons-fileupload:commons-fileupload:1.4", ex
    implementation "org.apache.commons:commons-text:1.9", ex

    implementation "com.fasterxml.jackson.core:jackson-databind:2.13.0", ex

    // https://mvnrepository.com/artifact/com.sparkjava/spark-core
    implementation 'com.sparkjava:spark-core:2.9.3'

    implementation "org.libreoffice:unoil:6.4.7", ex
    implementation "org.libreoffice:jurt:6.4.7", ex
    implementation "org.libreoffice:juh:6.4.7", ex
    implementation "org.libreoffice:ridl:6.4.7", ex

    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.2"
    testImplementation "org.mockito:mockito-core:4.1.0"
}
